--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
-    "tailwindcss": "^3.4.10"
+    "tailwindcss": "^3.4.10",
+    "tailwindcss-border-image": "^1.1.2"
   },
   "name": "starbucks",
   "version": "1.0.0",
